<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShareMee</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">ShareMee</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="drawer_open">Ouvrir</string>
    <string name="drawer_close">Fermer</string>
    <string name="font_fontFamily_medium">sans-serif</string>
    <string name="objectName">Nom de l\'objet</string>

    <string-array name="left_drawer_array">
        <item>Accueil</item>
        <item>Mon Profil</item>
        <item>Mes objets</item>
        <item>Rechercher</item>
        <item>A propos</item>
    </string-array>

    <!-- Activity names -->
    <string name="title_activity_all_objects">Résultats</string>
    <string name="title_activity_object_details">Détails de l\'objet</string>
    <string name="title_activity_my_object_details">Détails de mon objet</string>
    <string name="title_activity_my_profile_activity">Mon profil</string>
    <string name="title_activity_my_objects">Mes objets</string>
    <string name="title_activity_contact">Contacter</string>
    <string name="title_activity_modify_profile">Modifier</string>
    <string name="title_activity_signin">Inscription</string>
    <string name="title_activity_user_profile">Profil</string>


    <string name="distance_test">2.5 km</string>

    <!-- Cardview labels -->
    <string name="contact">CONTACT</string>
    <string name="see_profil">VOIR LE PROFIL</string>
    <string name="modify">MODIFIER</string>
    <string name="delete">SUPPRIMER</string>
    <string name="logout">DECONNEXION</string>

    <!-- Object details labels -->
    <string name="object_detail_desc_label">Description :</string>
    <string name="object_detail_category_label">Catégorie :</string>
    <string name="object_detail_username_label">Appartient à :</string>
    <string name="object_detail_cityname_label">Est situé à :</string>
    <string name="object_detail_distance_label">Distance :</string>

    <!-- My profile -->
    <string name="profile_name">Prénom :</string>
    <string name="profile_surname">Nom :</string>
    <string name="profile_mail">Email :</string>
    <string name="modify_profile">Modifier</string>

    <!-- Connection -->
    <string name="connexion">Connexion</string>
    <string name="rapid_connect">Connectez vous plus rapidement :</string>
    <string name="new_member">Nouveau Membre ?</string>
    <string name="forgot_password">Mot de passe oublié ?</string>
    <string name="title_activity_maps">Map</string>
    <string name="new_location">Latitude = %1$s, Longitude = %2$s, Altitude = %3$s</string>
    <string name="contact_lend">Contactez le préteur</string>
    <string name="name">Votre nom</string>
    <string name="name_label">Votre Nom</string>
    <string name="mail_label">Votre adresse mail</string>
    <string name="your_message">Votre Message</string>
    <string name="exemple_message">Bonjour, je souhaiterais vous emprunter votre objet du XX/XX au XX/XX. Est il disponible ?
    Je vous souhaite une bonne journée.
    Cordialement</string>
    <string name="send">ENVOYER</string>
    <string name="messageObject">Votre objet sur ShareMee</string>
    <string name="object_message_label">Objet du message</string>
    <string name="exMail">ex: nom@exemple.com</string>

    <!--Search-->
    <string name="search">RECHERCHER</string>

    <!-- Sign in -->
    <string name="signin">Inscription</string>
    <string name="signin_profile_user_name">Prénom</string>
    <string name="signin_profile_user_surname">Nom</string>
    <string name="signin_profile_user_email">Adresse email</string>
    <string name="signin_profile_user_password">Mot de passe</string>
    <string name="signin_profile_user_reenter_password">Vérification mot de passe</string>
    <string name="signin_profile_user_validate">S\'inscrire</string>

    <!-- modify profile -->
    <string name="modify_profile_user_name">Prénom</string>
    <string name="modify_profile_user_surname">Nom</string>
    <string name="modify_profile_user_email">Adresse email</string>
    <string name="modify_profile_user_password">Mot de passe</string>
    <string name="modify_profile_user_reenter_password">Vérification mot de passe</string>
    <string name="modify_profile_user_photo">Photo de profil</string>
    <string name="add_object">Ajouter un Objet</string>
    <string name="add_object_name">Nom de l\'objet</string>
    <string name="add_object_description_label">Description de l\'Objet</string>
    <string name="add_label">AJOUTER</string>
    <string name="add_picture_label">Ajouter une Photo</string>
    <string name="title_activity_add_object">Ajouter un Objet</string>
    <string name="search_hint">Rechercher des objets</string>
    <string name="title_activity_searchable">Recherche</string>
    <string name="title_base_activity">BASE</string>
    <string name="cancel">ANNULER</string>
    <string name="ok">OK</string>
    <string name="delete_title">SUPPRIMER</string>
    <string name="delete_message">Etes vous sur de vouloir supprimer cet objet ?</string>
    <string name="modify_object_name">Nom de l\'objet</string>
    <string name="modify_object_desc">Description de l\'objet</string>
    <string name="title_activity_about">A Propos</string>
    <string name="utilisation_guide">Guide d\'utilisation</string>
    <string name="user_create">1) Je crée un compte utilisateur</string>
    <string name="share_object">2) Je partage mes ojets avec la communauté</string>
    <string name="clause_pret">Clauses de prêt</string>
    <string name="clauses">Lorsque vous empruntez un objet, il est nécessaire de vérifier certaines choses avant.
        Vérifiez bien que l\'objet correspond bien à la description et qu\'iln\'est pas endommagé.
        Si vous constatez des dégradations sur celui ci, montrer les au préteur de sorte qu\'il ne puisse pas vous les imputer.
        Lors de son utilisation, respectez bien les consignes données par le préteur et faites y attention.</string>
    <string name="emprunteur">Lorsqu\'on emprunte un objet :</string>
    <string name="preteur">Lorsqu\'on prete un objet :</string>
    <string name="search_object">3) Je recherche l\'objet que je veux emprunter dans ma communauté</string>
    <string name="credentials">ShareMee© est un projet d\'étude réalisé par deux étudiants de HEI. Toute reproduction ou exploitation sans le consentement de ses créateurs sont interdites.</string>
    <string name="mail_sharemee">Plus d\'informations sur sharemee.com ou par mail : contact@sharemee.com</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="welcome">Bienvenue sur ShareMee !</string>

</resources>
