<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">

    <ScrollView
        android:id="@+id/scrollViewObject"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/idObjectModify"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/modify_object_label"
                android:text="@string/modify_profile"
                android:textSize="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_width="260dp"
                android:layout_height="260dp"
                android:src="@drawable/no_image"
                android:id="@+id/modify_object_picture"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"/>

            <Button android:id="@+id/add_object_picture_button"
                style="?android:textAppearanceSmall"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_picture_label"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:clickable="true" />

            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/login_form"
                android:layout_margin="10dp">

                <LinearLayout android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <AutoCompleteTextView android:id="@+id/modify_object_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/modify_object_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <AutoCompleteTextView android:id="@+id/modify_object_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/modify_object_desc"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/object_detail_category_label"/>

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner_category_modify"/>

                    <Button android:id="@+id/modify_object_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/modify"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"
                        android:clickable="true" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>



