<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.sharemee.app.sharemee.activity.HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/connexion_label"
        android:text="@string/welcome"
        android:textSize="25dp"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        />

    <ImageView
        android:layout_gravity="center"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:orientation="vertical"
        android:layout_gravity="center">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/search"
            android:id="@+id/buttonSearch"
            android:background="@color/secondary_color"
            android:textColor="@color/navdrawer_background"
            android:textSize="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/title_activity_my_objects"
            android:id="@+id/buttonMyObject"
            android:background="@color/secondary_color"
            android:textColor="@color/navdrawer_background"
            android:textSize="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/title_activity_my_profile_activity"
            android:id="@+id/buttonMyProfile"
            android:background="@color/secondary_color"
            android:textColor="@color/navdrawer_background"
            android:textSize="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/title_activity_about"
            android:id="@+id/buttonAbout"
            android:background="@color/secondary_color"
            android:textColor="@color/navdrawer_background"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>

