<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            android:id="@+id/your_name_label"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp" />

        <EditText
            android:background="@color/body_text_1_inverse"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/your_name"
            android:inputType="text"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textColor="@color/body_text_3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail_label"
            android:id="@+id/mail_label"
            android:hint="@string/exMail"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp" />

        <EditText
            android:background="@color/body_text_1_inverse"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_user"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textColor="@color/body_text_3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/object_message_label"
            android:id="@+id/object_message_label"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp" />

        <EditText
            android:background="@color/body_text_1_inverse"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/object_message"
            android:text="@string/messageObject"
            android:inputType="text"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_message"
            android:id="@+id/textView2"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp" />

        <EditText
            android:background="@color/body_text_1_inverse"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/mail_message"
            android:inputType="textMultiLine"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="top" />

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/contactCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginLeft="20dp"
            android:paddingLeft="20dp"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/secondary_color"
                android:orientation="vertical"
                android:id="@+id/contactUser">
                <!-- Contact-->
                <TextView
                    android:id="@+id/send_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/send"
                    android:textColor="#ffffffff"
                    android:textSize="25sp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</FrameLayout>