<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollViewUserProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:id="@+id/modify_user_picture_image_view"
    android:src="@drawable/profil" />

    <!-- Name -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify_profile_user_name"
        android:id="@+id/modify_user_name_text_view"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"/>
    <EditText
        android:background="@color/body_text_1_inverse"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/modify_user_name_edit_text"
        android:inputType="text"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"/>

    <!-- Surname -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_surname"
        android:id="@+id/modify_user_surname_text_view"
        android:hint="@string/exMail"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"/>
    <EditText
        android:background="@color/body_text_1_inverse"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/modify_user_surname_edit_text"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"/>

    <!-- Email -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify_profile_user_email"
        android:id="@+id/modify_user_mail_text_view"
        android:hint="@string/exMail"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"/>
    <EditText
        android:background="@color/body_text_1_inverse"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/modify_user_mail_edit_text"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"/>

    <!-- Password -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify_profile_user_password"
        android:id="@+id/modify_user_password_text_view"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"/>
    <EditText
        android:background="@color/body_text_1_inverse"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/modify_user_password_edit_text"
        android:text=""
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"/>

    <!-- Re enter password -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify_profile_user_reenter_password"
        android:id="@+id/modify_user_repassword_text_view"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"/>
    <EditText
        android:background="@color/body_text_1_inverse"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/modify_user_repassword_edit_text"
        android:text=""
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"/>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/contactCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginLeft="20dp"
        android:paddingLeft="20dp"
        android:layout_marginRight="20dp"
        android:clickable="true"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/secondary_color"
            android:orientation="vertical"
            android:id="@+id/contactUser">
            <!-- Contact-->
            <TextView
                android:id="@+id/contactObject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/modify"
                android:textColor="#ffffffff"
                android:textSize="25sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
    </ScrollView>
</FrameLayout>